@@ -19,13 +19,12 @@ package org.springframework.boot.autoconfigure.h2;
 import java.sql.Connection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import javax.sql.DataSource;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.h2.server.web.WebServlet;
+import org.h2.server.web.JakartaWebServlet;
 
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.autoconfigure.AutoConfiguration;
@@ -39,6 +38,7 @@ import org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.boot.web.servlet.ServletRegistrationBean;
 import org.springframework.context.annotation.Bean;
+import org.springframework.core.log.LogMessage;
 
 /**
  * {@link EnableAutoConfiguration Auto-configuration} for H2's web console.
@@ -50,7 +50,7 @@ import org.springframework.context.annotation.Bean;
  */
 @AutoConfiguration(after = DataSourceAutoConfiguration.class)
 @ConditionalOnWebApplication(type = Type.SERVLET)
-@ConditionalOnClass(WebServlet.class)
+@ConditionalOnClass(JakartaWebServlet.class)
 @ConditionalOnProperty(prefix = "spring.h2.console", name = "enabled", havingValue = "true")
 @EnableConfigurationProperties(H2ConsoleProperties.class)
 public class H2ConsoleAutoConfiguration {
@@ -58,11 +58,12 @@ public class H2ConsoleAutoConfiguration {
 	private static final Log logger = LogFactory.getLog(H2ConsoleAutoConfiguration.class);
 
 	@Bean
-	public ServletRegistrationBean<WebServlet> h2Console(H2ConsoleProperties properties,
+	public ServletRegistrationBean<JakartaWebServlet> h2Console(H2ConsoleProperties properties,
 			ObjectProvider<DataSource> dataSource) {
 		String path = properties.getPath();
 		String urlMapping = path + (path.endsWith("/") ? "*" : "/*");
-		ServletRegistrationBean<WebServlet> registration = new ServletRegistrationBean<>(new WebServlet(), urlMapping);
+		ServletRegistrationBean<JakartaWebServlet> registration = new ServletRegistrationBean<>(new JakartaWebServlet(),
+				urlMapping);
 		configureH2ConsoleSettings(registration, properties.getSettings());
 		if (logger.isInfoEnabled()) {
 			withThreadContextClassLoader(getClass().getClassLoader(), () -> logDataSources(dataSource, path));
@@ -82,24 +83,24 @@ public class H2ConsoleAutoConfiguration {
 	}
 
 	private void logDataSources(ObjectProvider<DataSource> dataSource, String path) {
-		List<String> urls = dataSource.orderedStream().map((available) -> {
-			try (Connection connection = available.getConnection()) {
-				return "'" + connection.getMetaData().getURL() + "'";
-			}
-			catch (Exception ex) {
-				return null;
-			}
-		}).filter(Objects::nonNull).collect(Collectors.toList());
+		List<String> urls = dataSource.orderedStream().map(this::getConnectionUrl).filter(Objects::nonNull).toList();
 		if (!urls.isEmpty()) {
-			StringBuilder sb = new StringBuilder("H2 console available at '").append(path).append("'. ");
-			String tmp = (urls.size() > 1) ? "Databases" : "Database";
-			sb.append(tmp).append(" available at ");
-			sb.append(String.join(", ", urls));
-			logger.info(sb.toString());
+			logger.info(LogMessage.format("H2 console available at '%s'. %s available at %s", path,
+					(urls.size() > 1) ? "Databases" : "Database", String.join(", ", urls)));
 		}
 	}
 
-	private void configureH2ConsoleSettings(ServletRegistrationBean<WebServlet> registration, Settings settings) {
+	private String getConnectionUrl(DataSource dataSource) {
+		try (Connection connection = dataSource.getConnection()) {
+			return "'" + connection.getMetaData().getURL() + "'";
+		}
+		catch (Exception ex) {
+			return null;
+		}
+	}
+
+	private void configureH2ConsoleSettings(ServletRegistrationBean<JakartaWebServlet> registration,
+			Settings settings) {
 		if (settings.isTrace()) {
 			registration.addInitParameter("trace", "");
 		}
